fixed: add click key enter and overflow scroll

--- a/src/css/TodoList.css
+++ b/src/css/TodoList.css
@@ -1,3 +1,7 @@
-.TodoList{
+.TodoList {
     margin-top: 44px;
+    height: 500px;
+    overflow: scroll;
+    overflow-x: auto;
+    scrollbar-width: none;
 }
